native/generated/bridge_entrypoints.g.h

// Generated by JYPPX.BindingGenerator on deterministic

// generated from manifest id=common-clear-last-error
JYPPX_C_API(void) jyppx_common_clear_last_error(void);
// generated from manifest id=common-error-category-to-string
JYPPX_C_API(IntPtr) jyppx_common_error_category_to_string(JYPPX_ErrorCategory category);
// generated from manifest id=common-get-abi-version
JYPPX_C_API(int) jyppx_common_get_abi_version(void);
// generated from manifest id=common-get-bridge-banner
JYPPX_C_API(IntPtr) jyppx_common_get_bridge_banner(void);
// generated from manifest id=common-get-bridge-name
JYPPX_C_API(IntPtr) jyppx_common_get_bridge_name(void);
// generated from manifest id=common-get-build-info
JYPPX_C_API(BridgeStatusCode) jyppx_common_get_build_info(JYPPX_BuildInfo* out_info);
// generated from manifest id=common-get-last-error-category
JYPPX_C_API(BridgeErrorCategory) jyppx_common_get_last_error_category(void);
// generated from manifest id=common-get-last-error-message
JYPPX_C_API(BridgeStatusCode) jyppx_common_get_last_error_message(char* buffer, size_t buffer_size, size_t* out_required_size);
// generated from manifest id=common-query-capability-info
JYPPX_C_API(BridgeStatusCode) jyppx_common_query_capability_info(JYPPX_CapabilityInfo* out_info);
// generated from manifest id=common-query-runtime-info
JYPPX_C_API(BridgeStatusCode) jyppx_common_query_runtime_info(JYPPX_RuntimeInfo* out_info);
// generated from manifest id=common-status-code-to-string
JYPPX_C_API(IntPtr) jyppx_common_status_code_to_string(JYPPX_StatusCode status_code);