src/JYPPX.TensorRtSharp/Internal/Interop/Generated/NativeMethodsCommon.Generated.g.cs

using System;
using System.Runtime.InteropServices;
using JYPPX.TensorRtSharp.Shared;
using JYPPX.TensorRtSharp.Shared.Interop;


namespace JYPPX.TensorRtSharp.Internal.Interop;

/// <summary>
/// Generated module-specific interop declarations.
/// Generated by JYPPX.BindingGenerator on deterministic.
/// 生成的模块专用 interop 声明；由 JYPPX.BindingGenerator 在 deterministic 生成。
/// </summary>
internal static partial class NativeMethodsCommon
{
    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern void jyppx_common_clear_last_error();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern IntPtr jyppx_common_error_category_to_string(BridgeErrorCategory category);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern int jyppx_common_get_abi_version();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern IntPtr jyppx_common_get_bridge_banner();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern IntPtr jyppx_common_get_bridge_name();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_common_get_build_info(out NativeBuildInfo out_info);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeErrorCategory jyppx_common_get_last_error_category();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_common_get_last_error_message(byte[] buffer, UIntPtr buffer_size, out UIntPtr out_required_size);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_common_query_capability_info(out NativeCapabilityInfo out_info);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_common_query_runtime_info(out NativeRuntimeInfo out_info);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern IntPtr jyppx_common_status_code_to_string(BridgeStatusCode status_code);
}
